crates/ridge-parser/tests/fixtures/errors/p021_inline_record_in_return_type.ridge
-- expect: P021
-- Trigger: inline record type with an uppercase field name (not a lowercase identifier).
-- Well-formed inline record types in return position are now supported; this tests
-- the malformed-type diagnostic when a field name is not a lowercase identifier.
pub fn foo () -> { Name: Text } =
    { name = "ada" }
